--- a/install/install.cfg
+++ b/install/install.cfg
@@ -26,10 +26,10 @@ set -e -x
 # Configuration
 ###############################################################################
 # which user to install the code for; defaults to the user invoking this script
-REDDIT_USER=${REDDIT_USER:-$SUDO_USER}
+REDDIT_USER=${REDDIT_USER:-redditusr}
 
 # the group to run reddit code as; must exist already
-REDDIT_GROUP=${REDDIT_GROUP:-nogroup}
+REDDIT_GROUP=${REDDIT_GROUP:-redditgrp}
 
 # the root directory to base the install in. must exist already
 REDDIT_HOME=${REDDIT_HOME:-/home/$REDDIT_USER}
